--- a/LiveChat_app/static/css/login_signup.css
+++ b/LiveChat_app/static/css/login_signup.css
@@ -1,6 +1,11 @@
 /* Google Fonts - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
+:root{
+    --color_1:rgba(0, 166, 255, 0.7);
+    --color_2:rgb(141, 90, 205);
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -8,7 +13,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: linear-gradient(to right, rgb(255, 55, 55), rgb(0, 132, 255));
+    background-image: linear-gradient(rgba(255, 255, 255, 1) 0%, rgba(251, 251, 251, 0.1) 100%), linear-gradient(90deg, var(--color_1), var(--color_2));
     height: 100%!important;
     width: 100%!important;
 }
@@ -63,39 +68,48 @@ form{
     font-weight: 400;
     border-radius: 6px;
 }
+.field input:hover,
+.field input:focus{
+    border: 1px solid rgba(0, 0, 0, 0.6);
+}
 .field input{
     outline: none;
     padding: 0 15px;
     color: black;
     background-color:  rgba(255,255,255,0.04);
-    border: 1px solid#CACACA;
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 .field input::placeholder {
     color: black;
     opacity: 1; /* Firefox */
   }
-.field input:focus{
-    border-bottom-width: 2px;
-}
+
 .eye-icon{
     position: absolute;
     top: 50%;
     right: 10px;
     transform: translateY(-50%);
     font-size: 18px;
-    color: #8b8b8b;
+    color: rgba(0, 0, 0, 0.5);
     cursor: pointer;
     padding: 5px;
 }
+
+.eye-icon:hover,
+.eye-icon:focus{
+    color: rgba(0, 0, 0, 0.7);
+}
+
 .field button{
     color: white;
-    background-image: linear-gradient(to right, rgb(255, 55, 55), rgb(0, 132, 255));
-    border: 1px solid#CACACA;
+    background-image:  linear-gradient(90deg, var(--color_1), var(--color_2));
+    
     transition: all 0.3s ease;
     cursor: pointer;
 }
 .field button:hover{
-    opacity: 0.5;
+    opacity: 0.8;
+    border: 1px solid white;
 }
 .form-link{
     text-align: center;
@@ -108,7 +122,7 @@ form{
     color: #232836;
 }
 .form a{
-    color: white;
+    color: rgba(0, 0, 0, 0.6);
     text-decoration: none;
 }
 .form-content a:hover{
@@ -136,28 +150,41 @@ form{
     align-items: center;
     justify-content: center;
 }
-a.facebook{
-    color: #fff;
-    background-color: #4267b2;
-}
+
 a.facebook .facebook-icon{
     height: 28px;
     width: 28px;
-    color: #0171d3;
+    color: #fff;
     font-size: 20px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-color: #0171d3;
 }
+
+a.google .google-icon{
+    height: 28px;
+    width: 28px;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #DB4437;
+}
+
 .facebook-icon,
-img.google-img{
+.google-icon{
     position: absolute;
     top: 50%;
     left: 15px;
     transform: translateY(-50%);
 }
+
+
+
 img.google-img{
     height: 20px;
     width: 20px;
@@ -178,3 +205,13 @@ a.google span{
     }
     
 }
+
+
+
+
+
+
+
+
+
+
