--- a/LiveChat_app/templates/html/home.html
+++ b/LiveChat_app/templates/html/home.html
@@ -35,6 +35,11 @@
       }
 
     </style>
+
+    <script>
+      const USER_email ="{{user.email}}";
+      var userProfilePic = "{{user.profile_pic.url}}";
+    </script>
 </head>
 <body>
     <div class="app">
@@ -115,7 +120,7 @@
 
 
             <div class="chat-area-main" style="display:flex;flex-direction: column; flex-direction: column-reverse;overflow: auto; ">
-              <div style="">
+              <div id="chat_main_area_id">
 
   
                 {% for chat in chat_msg_data %}
@@ -128,7 +133,7 @@
                         {% with next_item=chat_msg_data|next_elem_in_for:forloop.counter0 %}
                             {% if not next_item.user == chat.user %}
                                 <div class="chat-msg-profile">
-                                  <img class="chat-msg-img" src="{{ user.profile_pic.url }}" alt="" />
+                                  <img class="chat-msg-img" src="{% if not user.profile_pic.url == null %}{{ user.profile_pic }}{% endif %}" alt="" />
                                   <div class="chat-msg-date">{{ chat.chat_date }}</div>
                                 </div>
                             {% else %}
@@ -175,9 +180,9 @@
               
 
             </div>
-            <!-- -->
+            <!--<form method="POST" class="" style="display:flex;width:100%;margin:0;padding:0%;" >
+                {% csrf_token %} -->
             <div class="chat-area-footer">
-              <form method="POST" class="" style="display:flex;width:100%;margin:0;padding:0%;">
               
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
                   <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
@@ -197,16 +202,16 @@
                 <input type="file" multiple  id="file-input" style="display: none;"></input>
               
                 <a class="a_btn"><i class="bx bxs-face bx-sm "></i></a>
-                <input type="text" placeholder="Type something here..." />
+                <input type="text" id="text_input"  placeholder="Type something here..." />
 
-                <a class="a_btn"><i class="bx bx-send bx-sm btn"></i></a>
+                <a class="a_btn" onclick="sendMessage()"><i class="bx bx-send bx-sm btn"></i></a>
 
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up">
                   <path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3" /></svg>
               
-              </form>
+              
             </div>
-            <!-- -->
+            <!-- </form>-->
 
           </div>
 
@@ -293,6 +298,10 @@
           </div>
         </div>
        </div>
+
+
+
+    <script type="text/javascript" src="{% static 'js/chat.js'%}"></script>
 </body>
 </html>
 
