--- a/LiveChat_app/templates/html/home.html
+++ b/LiveChat_app/templates/html/home.html
@@ -70,7 +70,7 @@
           <div class="conversation-area">
 
             {% for chats in chats_data %}
-            <div class="msg active online">
+            <div class="msg active online"  onclick="open_conv('{{chats.chat_box_id}}')">
               <img class="msg-profile" src="{{ chats.img.url }}" alt="" />
               <div class="msg-detail">
                 <div class="msg-username">{% if not grp %} {% for user_title in chats.chats_users_as_list %} {% if not user_title == user.email %}{{user_title}}{% endif %} {% endfor %}{% endif %}</div>
@@ -107,114 +107,120 @@
             <button class="add"></button>
             <div class="overlay"></div>
           </div>
+
+
           <div class="chat-area" style="">
-            <div class="chat-area-header">
-            <div class="chat-area-title">CodePen Group</div>
-            <div class="chat-area-group">
-              <img class="chat-area-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%283%29+%281%29.png" alt="" />
-              <img class="chat-area-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%282%29.png" alt="">
-              <img class="chat-area-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%2812%29.png" alt="" />
-              <span>+4</span>
-            </div>
-            </div>
+            <div class="" style="display:non;">
+              <div class="chat-area-header">
+              <div class="chat-area-title">CodePen Group</div>
+              <div class="chat-area-group">
+                <img class="chat-area-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%283%29+%281%29.png" alt="" />
+                <img class="chat-area-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%282%29.png" alt="">
+                <img class="chat-area-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%2812%29.png" alt="" />
+                <span>+4</span>
+              </div>
+              </div>
 
 
-            <div class="chat-area-main" style="display:flex;flex-direction: column; flex-direction: column-reverse;overflow: auto; ">
-              <div id="chat_main_area_id">
+              <div class="chat-area-main" style="display:flex;flex-direction: column; flex-direction: column-reverse;overflow: auto; ">
+                <div id="chat_main_area_id">
 
-  
-                {% for chat in chat_msg_data %}
-                  
-                  <div class="chat-msg {% if user.email == chat.user %} owner {% endif %}">
-
+    
+                  {% for chat in chat_msg_data %}
                     
-                    {% if not user.email == chat.user %}
-                      {% if not forloop.last %}
-                        {% with next_item=chat_msg_data|next_elem_in_for:forloop.counter0 %}
-                            {% if not next_item.user == chat.user %}
+                    <div class="chat-msg {% if user.email == chat.user %} owner {% endif %}">
+
+                      
+                      {% if not user.email == chat.user %}
+                        {% if not forloop.last %}
+                          {% with next_item=chat_msg_data|next_elem_in_for:forloop.counter0 %}
+                              {% if not next_item.user == chat.user %}
+                                  <div class="chat-msg-profile">
+                                    <img class="chat-msg-img" src="{% if not user.profile_pic.url == null %}{{ user.profile_pic }}{% endif %}" alt="" />
+                                    <div class="chat-msg-date">{{ chat.chat_date }}</div>
+                                  </div>
+                              {% else %}
                                 <div class="chat-msg-profile">
-                                  <img class="chat-msg-img" src="{% if not user.profile_pic.url == null %}{{ user.profile_pic }}{% endif %}" alt="" />
                                   <div class="chat-msg-date">{{ chat.chat_date }}</div>
                                 </div>
+                              {% endif %}
+                          {% endwith %}
+                        {% else %}
+                          <div class="chat-msg-profile">
+                            <img class="chat-msg-img" src="{{ user.profile_pic.url }}" alt="" />
+                            <div class="chat-msg-date">{{ chat.chat_date }}</div>
+                          </div>
+                        {% endif %}
+                      {% endif %}
+                      <div class="chat-msg-content">
+                        
+                        {% if chat.contain_file %}
+                          <div class="chat-msg-text">
+                            
+
+                            {% if chat.file_type == "excel" %}
+                              <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-excel-2-line fp_icon" ></i></a>
+                            {% elif chat.file_type == "pdf" %}
+                              <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-pdf fp_icon" ></i></a>
+                            {% elif chat.file_type == "img" %}
+                              <a class="nav-link nav-icon show" href="{{ chat.file.url }}" download><img src="{{  chat.file.url }}" alt="Image" ></a>
+                            {% elif chat.file_type == "word" %}
+                              <a class="nav-link nav-icon show" href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-word fp_icon" ></i></a>
                             {% else %}
-                              <div class="chat-msg-profile">
-                                <div class="chat-msg-date">{{ chat.chat_date }}</div>
-                              </div>
+                              <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-line fp_icon" ></i></a>
                             {% endif %}
-                        {% endwith %}
-                      {% else %}
-                        <div class="chat-msg-profile">
-                          <img class="chat-msg-img" src="{{ user.profile_pic.url }}" alt="" />
-                          <div class="chat-msg-date">{{ chat.chat_date }}</div>
-                        </div>
-                      {% endif %}
-                    {% endif %}
-                    <div class="chat-msg-content">
-                      
-                      {% if chat.contain_file %}
-                        <div class="chat-msg-text">
-                          
 
-                          {% if chat.file_type == "excel" %}
-                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-excel-2-line fp_icon" ></i></a>
-                          {% elif chat.file_type == "pdf" %}
-                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-pdf fp_icon" ></i></a>
-                          {% elif chat.file_type == "img" %}
-                            <a class="nav-link nav-icon show" href="{{ chat.file.url }}" download><img src="{{  chat.file.url }}" alt="Image" ></a>
-                          {% elif chat.file_type == "word" %}
-                            <a class="nav-link nav-icon show" href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-word fp_icon" ></i></a>
-                          {% else %}
-                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-line fp_icon" ></i></a>
-                          {% endif %}
-
-                        </div>
-                      {% endif %}
-                      <div class="chat-msg-text">{{ chat.chat }}</div>
+                          </div>
+                        {% endif %}
+                        <div class="chat-msg-text">{{ chat.chat }}</div>
+                      </div>
+                        
+                        
+                        
                     </div>
-                      
-                      
-                      
-                  </div>
-                {% endfor %}
-              </div>
-              
-
-            </div>
-            <!--<form method="POST" class="" style="display:flex;width:100%;margin:0;padding:0%;" >
-                {% csrf_token %} -->
-            <div class="chat-area-footer">
-              
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
-                  <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
-                  <circle cx="8.5" cy="8.5" r="1.5" />
-                  <path d="M21 15l-5-5L5 21" /></svg>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-circle">
-                  <circle cx="12" cy="12" r="10" />
-                  <path d="M12 8v8M8 12h8" /></svg>
-
-                  
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip">
-                  <path d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48" /></svg>
+                  {% endfor %}
+                </div>
                 
-                <label for="file-input">
-                  <a class="a_btn"><i class="fa fa-paperclip" ></i></a>
-                </label>
-                <input type="file" multiple  id="file-input" style="display: none;"></input>
-              
-                <a class="a_btn"><i class="bx bxs-face bx-sm "></i></a>
-                <input type="text" id="text_input"  placeholder="Type something here..." />
 
-                <a class="a_btn" onclick="sendMessage()"><i class="bx bx-send bx-sm btn"></i></a>
 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up">
-                  <path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3" /></svg>
-              
-              
+
+                
+              </div>
+              <!--<form method="POST" class="" style="display:flex;width:100%;margin:0;padding:0%;" >
+                  {% csrf_token %} -->
+              <div class="chat-area-footer">
+                
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
+                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
+                    <circle cx="8.5" cy="8.5" r="1.5" />
+                    <path d="M21 15l-5-5L5 21" /></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-circle">
+                    <circle cx="12" cy="12" r="10" />
+                    <path d="M12 8v8M8 12h8" /></svg>
+
+                    
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip">
+                    <path d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48" /></svg>
+                  
+                  <label for="file-input">
+                    <a class="a_btn"><i class="fa fa-paperclip" ></i></a>
+                  </label>
+                  <input type="file" multiple  id="file-input" style="display: none;"></input>
+                
+                  <a class="a_btn"><i class="bx bxs-face bx-sm "></i></a>
+                  <input type="text" id="text_input"  placeholder="Type something here..." />
+
+                  <a class="a_btn" onclick="sendMessage()"><i class="bx bx-send bx-sm btn"></i></a>
+
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up">
+                    <path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3" /></svg>
+                
+                
+              </div>
+              <!-- </form>-->
+
             </div>
-            <!-- </form>-->
-
           </div>
-
 
           <div class="detail-area">
             <div class="detail-area-header">
@@ -301,7 +307,8 @@
 
 
 
-    <script type="text/javascript" src="{% static 'js/chat.js'%}"></script>
+       <script type="text/javascript" src="{% static 'js/chat.js'%}"></script>
+       <script type="text/javascript" src="{% static 'js/chat1.js'%}"></script>
 </body>
 </html>
 
