--- a/LiveChat_app/static/css/chat.css
+++ b/LiveChat_app/static/css/chat.css
@@ -121,6 +121,7 @@ html {
   flex-shrink: 0;
 }
 .detail-area {
+
   border-left: 1px solid var(--border-color);
   margin-left: auto;
   padding: 30px 30px 0 30px;
@@ -689,8 +690,9 @@ html {
 
 
 
-
-
+.cursor_pointer{
+  cursor: pointer;
+}
 
 
 
