--- a/LiveChat_app/templates/html/home.html
+++ b/LiveChat_app/templates/html/home.html
@@ -115,7 +115,7 @@
           <div class="chat-area" style="display:non;">
             <!-- CHAT (Header/Main/Footer) AREA -->
 
-            <div class="chat-area-footer">
+            <div class="chat-area-footer" >
               
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
                   <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
@@ -132,7 +132,7 @@
                 <label for="file-input">
                   <a class="a_btn"><i class="fa fa-paperclip" ></i></a>
                 </label>
-                <input type="file" multiple  id="file-input" style="display: none;"></input>
+                <input type="file" multiple  id="file_input" style="display: none;"></input>
               
                 <a class="a_btn"><i class="bx bxs-face bx-sm "></i></a>
                 <input type="text" id="text_input"  placeholder="Type something here..." />
