--- a/LiveChat_app/templates/html/chat_box/chat_area.html
+++ b/LiveChat_app/templates/html/chat_box/chat_area.html
@@ -2,7 +2,7 @@
 {% load costum_tags %}
 {% load humanize %}
 
-<div class="chat-area" id="chat-area-${box_ID}">
+<div class="chat-area" id="chat-area-{{ box_ID }}">
     <div class="chat-area-header" id="chat_header_area_id">
         <img class="msg-profile" src="{{Chats_BOX.img}}" alt="" />
         <div class="chat-area-title">{{Chats_BOX.title}}</div>
@@ -37,24 +37,42 @@
                     {% endif %}
                     <div class="chat-msg-content">
                       
-                      {% if chat.contain_file %}
-                        <div class="chat-msg-text">
-                          
+                        {% if chat.files.file_check %}
+                                <div class="chat-msg-text">
+                                    {% if F.file_type == "excel" %}
+                                        <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-excel-2-line fp_icon" ></i></a>
+                                    {% elif F.file_type == "pdf" %}
+                                        <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-pdf fp_icon" ></i></a>
+                                    {% elif chat.files.file_type == "img" or  chat.files.file_type == "gif" %}
+                                        <a class="nav-link nav-icon show" href="{{ chat.files.file.url }}" download><img src="{{  chat.files.file.url }}" alt="Image" ></a>
+                                    {% elif F.file_type == "word" %}
+                                        <a class="nav-link nav-icon show" href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-word fp_icon" ></i></a>
+                                    {% else %}
+                                        <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-line fp_icon" ></i></a>
+                                    {% endif %}
+                                </div>
+                            {% else %}
+                            <script>console.log()</script>
+                            {% if chat.contain_files %}
+                            
+                                {% for F in chat.files %}
+                                    <div class="chat-msg-text">
+                                        {% if F.file_type == "excel" %}
+                                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-excel-2-line fp_icon" ></i></a>
+                                        {% elif F.file_type == "pdf" %}
+                                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-pdf fp_icon" ></i></a>
+                                        {% elif F.file_type == "img" or  F.file_type == "gif" %}
+                                            <a class="nav-link nav-icon show" href="{{F.file.url }}" download><img src="{{  F.file.url }}" alt="Image" ></a>
+                                        {% elif F.file_type == "word" %}
+                                            <a class="nav-link nav-icon show" href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-word fp_icon" ></i></a>
+                                        {% else %}
+                                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-line fp_icon" ></i></a>
+                                        {% endif %}
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        {% endif %}
 
-                          {% if chat.file_type == "excel" %}
-                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-excel-2-line fp_icon" ></i></a>
-                          {% elif chat.file_type == "pdf" %}
-                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-pdf fp_icon" ></i></a>
-                          {% elif chat.file_type == "img" or  chat.file_type == "gif"%}
-                            <a class="nav-link nav-icon show" href="{{ chat.file.url }}" download><img src="{{  chat.file.url }}" alt="Image" ></a>
-                          {% elif chat.file_type == "word" %}
-                            <a class="nav-link nav-icon show" href="{{ F.file_save.url }}" download><i class="bi bi-file-earmark-word fp_icon" ></i></a>
-                          {% else %}
-                            <a class="nav-link nav-icon show"  href="{{ F.file_save.url }}" download><i class="ri-file-line fp_icon" ></i></a>
-                          {% endif %}
-
-                        </div>
-                      {% endif %}
                       <div class="chat-msg-text">{{ chat.chat }}</div>
                     </div>
                       
