--- a/LiveChat_app/templates/html/chat_box/chat_area.html
+++ b/LiveChat_app/templates/html/chat_box/chat_area.html
@@ -105,7 +105,7 @@
         <a class="a_btn"><i class="bx bxs-face bx-sm "></i></a>
         <input type="text" id="text_input"  placeholder="Type something here..." />
 
-        <a class="a_btn" onclick="sendMessage()"><i class="bx bx-send bx-sm btn"></i></a>
+        <a class="a_btn" onclick="sendMessage('{{box_ID}}')"><i class="bx bx-send bx-sm btn"></i></a>
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up">
           <path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3" /></svg>
