--- a/LiveChat_app/templates/html/chat_box/chat_area.html
+++ b/LiveChat_app/templates/html/chat_box/chat_area.html
@@ -84,7 +84,8 @@
 
 
     <div class="chat-area-footer">
-      
+      <form class="chat-area-footer-form" method="POST" onsubmit="return false">
+        {% csrf_token %}
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
           <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
           <circle cx="8.5" cy="8.5" r="1.5" />
@@ -103,13 +104,23 @@
         <input type="file" multiple  id="file-input" style="display: none;"></input>
       
         <a class="a_btn"><i class="bx bxs-face bx-sm "></i></a>
-        <input type="text" id="text_input"  placeholder="Type something here..." />
+        <input type="text" id="text_input"  placeholder="Type something here..."  onsubmit="sendMessage('{{box_ID}}')" />
 
-        <a class="a_btn" onclick="sendMessage('{{box_ID}}')"><i class="bx bx-send bx-sm btn"></i></a>
+        <a class="a_btn " id="sendMessage" onclick="sendMessage('{{box_ID}}')"><i class="bx bx-send bx-sm btn"></i></a>
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up">
           <path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3" /></svg>
-      
-      
+
+      </form>
     </div>
 </div>
+
+<script>var input = document.getElementById("text_input");
+  input.addEventListener("keypress", function(event) {
+      // If the user presses the "Enter" key on the keyboard
+      console.log('enter ssss')
+      if (event.key === "Enter") {
+          $("#sendMessage").click();
+      }
+    });
+  </script>
