--- a/LiveChat_app/templates/html/chat_box/chat_area.html
+++ b/LiveChat_app/templates/html/chat_box/chat_area.html
@@ -72,8 +72,10 @@
                                 {% endfor %}
                             {% endif %}
                         {% endif %}
-
-                      <div class="chat-msg-text">{{ chat.chat }}</div>
+                      {% if chat.contain_txt %}
+                        <div class="chat-msg-text">{{ chat.chat }}</div>
+                      {% endif %}
+                      
                     </div>
                       
                       
