--- a/LiveChat_app/static/css/chat.css
+++ b/LiveChat_app/static/css/chat.css
@@ -416,6 +416,7 @@ html {
   position: sticky;
   bottom: 0;
   left: 0;
+  flex-direction: column;
 }
 .chat-area-footer-form{
   display: flex;
@@ -714,57 +715,37 @@ html {
   cursor: pointer;
 }
 
-
-
-.popup-overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.popup {
-font-family: Arial, sans-serif;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.popup-content {
-  text-align: center;
-}
-
-.popup .close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 20px;
+.function_btn{
   cursor: pointer;
-  color: #333;
+  color:black;
 }
-
-.popup #emailInput {
-  width: 80%;
-  padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+.function_btn:hover ,.function_btn:focus{
+  color:gray;
 }
+.popup_File{
+  display: none ; /* flex */
+  width:100%;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+}
+.popup_File_close{
+  position:absolute;
+  top:0;
+  right:0;
 
-.popup button {
-  background-color: #4caf50;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
+}
+.popup_File_close i{
+  margin:10px 20px;
+}
+.popup_File_content{
+  position:relative;
+  max-height:90px;
+  border-radius:10px;
+  background-color:gray;  
+}
+.popup_File_content img{
+  position:relative;
+  max-height:90px;
+  border-radius:10px;
 }
