--- a/LiveChat_app/templates/html/chat_box/chat_area.html
+++ b/LiveChat_app/templates/html/chat_box/chat_area.html
@@ -7,7 +7,7 @@
         <img class="msg-profile" src="{{Chats_BOX.img}}" alt="" />
         <div class="chat-area-title">{{Chats_BOX.title}}</div>
         <div class="chat-area-group">
-            <a class="cursor_pointer" onclick="open_details_area('{{box_ID}}')"><i class="bx bx-cog bx-md"></i></a>
+            <a class="cursor_pointer function_btn" onclick="open_details_area('{{box_ID}}')"><i class="bx bx-cog bx-md"></i></a>
         </div>
     </div>
     <div class="chat-area-main" id="chat_main_area_id" style="overflow-y: auto;display: flex;flex-direction: column;overflow-y: auto; height:100%!important; width: 100%!important; flex-direction: column-reverse;">
@@ -84,73 +84,15 @@
                 {% endfor %}
     </div>
 
-<style>
-  .popup {
-    display: none;
-    position: fixed;
-    z-index: 100000000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-}
 
-.popup-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 500px;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#previewContainer img,
-#previewContainer a {
-    display: block;
-    margin: 10px 0;
-}
-
-#previewContainer img {
-    max-width: 100px;
-}
-</style>
     <div class="chat-area-footer">
-      <div id="popupBox" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Previews</h2>
-            <div id="previewContainer">
-                <!-- Previews will be inserted here -->
-            </div>
-        </div>
-    </div>
+      <div id="popup_File" class="popup_File">
+        <a class="popup_File_close function_btn" onclick="popup_File_close()"><i class="bx bx-x bx-sm"></i></a>
+
+      </div>
       <form class="chat-area-footer-form" method="POST" onsubmit="return false">
         {% csrf_token %}
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
-          <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
-          <circle cx="8.5" cy="8.5" r="1.5" />
-          <path d="M21 15l-5-5L5 21" /></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-circle">
-          <circle cx="12" cy="12" r="10" />
-          <path d="M12 8v8M8 12h8" /></svg>
-
+        
         <a class="a_btn"><i class="bx bxs-face bx-sm "></i></a>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip">
           <path d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48" /></svg>
@@ -162,77 +104,81 @@
         
         <input type="text" id="text_input"  placeholder="Type something here..."  onsubmit="sendMessage('{{box_ID}}')" />
         
-        <script>$('#file-input').change(function(){
-          var fi=$('#file-input').prop('files');
-          var files=[];
-          console.log(fi);
-          for(var i=0; i<fi.length;i++){
-            console.log(fi[i].name);
-            files[i]=fi[i].name;
-            
-          }
-          console.log(fi);
-          console.log('fil',files);
-          
-          popupBox.style.display = 'block';
-          displayPreviews(fileInput.files);
-
-        })
+        <script>
         </script>
 
-        <script>const openPopupBtn = document.getElementById('openPopupBtn');
-          const popupBox = document.getElementById('popupBox');
-          const closeBtn = document.querySelector('.close');
-          const fileInput = document.getElementById('file-input');
-          const previewContainer = document.getElementById('previewContainer');
-      
-          
-          
-      
-          window.addEventListener('click', (event) => {
-              if (event.target === popupBox) {
-                  popupBox.style.display = 'none';
-                  clearPreviews();
-              }
-          });
-      
-          function displayPreviews(files) {
-              clearPreviews();
-              Array.from(files).forEach(file => {
-                  if (file.type.startsWith('image/')) {
-                      const reader = new FileReader();
-                      reader.onload = (e) => {
-                          const img = document.createElement('img');
-                          img.src = e.target.result;
-                          previewContainer.appendChild(img);
-                      };
-                      reader.readAsDataURL(file);
-                  } else {
-                      const link = document.createElement('a');
-                      link.href = URL.createObjectURL(file);
-                      link.textContent = file.name;
-                      link.target = '_blank';
-                      previewContainer.appendChild(link);
-                  }
-              });
-          }
-      
-          function clearPreviews() {
-              previewContainer.innerHTML = '';
-          }</script>
+        
         <a class="a_btn " id="sendMessage" onclick="sendMessage('{{box_ID}}')"><i class="bx bx-send bx-sm btn"></i></a>
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up">
-          <path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3" /></svg>
-
+        
       </form>
     </div>
 </div>
 
+<script>$('#file-input').change(function(){
+  var fi=$('#file-input').prop('files');
+  displayPreviews(fi);
+})
+
+const popup_File = document.querySelector('.popup_File');
+var popup_File_id = document.getElementById('popup_File_id');
+const closeBtn = document.querySelector('.close');
+//const fileInput = document.getElementById('file-input');
+//const previewContainer = document.getElementById('previewContainer');
+
+window.addEventListener('click', (event) => {
+    if (event.target === popup_File) {
+        popup_File.style.display = 'none';
+        clearPopup_File();
+    }
+});
+
+
+document.addEventListener('DOMContentLoaded', displayPreviews);
+function displayPreviews(files) {
+    clearPopup_File();
+    $('.popup_File').css('display','flex')
+    Array.from(files).forEach(file => {
+        if (file.type.startsWith('image/')) {
+            const reader = new FileReader();
+            
+            reader.onload = (e) => {
+              const popup_File_content = document.createElement('div');
+              popup_File_content.className  = 'popup_File_content'
+
+              const img = document.createElement('img');
+              img.src = e.target.result;
+
+              popup_File_content.appendChild(img)
+              popup_File.appendChild(popup_File_content);
+
+            };
+            reader.readAsDataURL(file);
+        } else {
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(file);
+            link.textContent = file.name;
+            link.target = '_blank';
+            previewContainer.appendChild(link);
+        }
+    });
+}
+
+function popup_File_close(){
+  $('.popup_File').html('');
+  clearPopup_File()
+  $('.popup_File').css('display','none');
+  $('#file-input').val('');
+}
+function clearPopup_File(){
+  $('.popup_File').html('<a class="popup_File_close function_btn" onclick="popup_File_close()"><i class="bx bx-x bx-sm"></i></a>');
+}
+
+</script>
 <script>var input = document.getElementById("text_input");
   input.addEventListener("keypress", function(event) {
       // If the user presses the "Enter" key on the keyboard
-      console.log('enter ssss')
+      
       if (event.key === "Enter") {
           $("#sendMessage").click();
       }
