--- a/LiveChat_app/static/css/chat.css
+++ b/LiveChat_app/static/css/chat.css
@@ -209,6 +209,27 @@ html {
   flex-direction: column;
   position: relative;
 }
+
+.conv-area-search{
+  display: flex;
+  width: 100%;
+  height: 100px;
+  margin: 0 auto;
+
+  vertical-align: middle;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+.conv-area-search-btn{
+  
+}
+.conv-area-search input{
+  height: 40px;
+  width: 80%;
+  
+}
+
+
 .msg-profile {
   width: 44px;
   height: 44px;
