--- a/LiveChat_app/templates/html/chat_box/load_conv_area.html
+++ b/LiveChat_app/templates/html/chat_box/load_conv_area.html
@@ -22,5 +22,5 @@
 {% endfor %}
 
 
-<button class="add" onclick="add_conv()"></button>
+<button class="add" onclick="load_add_conv()"></button>
 <div class="overlay"></div>
