--- a/LiveChat_app/templates/html/home.html
+++ b/LiveChat_app/templates/html/home.html
@@ -81,63 +81,39 @@
       <div class="wrapper">
 
         <div class="conversation-area" id='conversation-area' >
+          <div class='conv-area-navig'>
+            <a class="conv-area-search-btn c-a-n-show" onclick="load_conv_area()"><i class="bx bx-left-arrow-alt bx-lg"></i>Conversation</a>
+            <a class="conv-area-search-btn c-a-n-hide" onclick="">Search<i class="bx bx-right-arrow-alt bx-lg"></i></a>
+          </div>
+
           <div class='conv-area-search'>
-            <input type="text" placeholder="Search...">
+            <input type="text" id="input-conv-area-search" onchange="onchange_input_CAS()" placeholder="Search...">
             <a class="conv-area-search-btn"><i class="bx bx-search bx-lg"></i></a>
           </div>
 
-          <style>
-            .s010 form .inner-form .basic-search {
-              box-shadow: 0 8px 20px 0 rgba(0, 0, 0, .15);
-              overflow: hidden;
-              border-radius: 34px;
-              margin-bottom: 5px;
-          }
-             .input-field input {
-              height: 100%;
-              border: 0;
-              display: block;
-              width: 100%;
-              padding: 10px 32px 10px 70px;
-              font-size: 18px;
-              height: 70px;
-              color: #fff;
-              background: linear-gradient(to right, #2c6dd5 0%, #2c6dd5 28%, #ff4b5a 91%, #ff4b5a 100%);
-              font-family: lato, sans-serif;
-          }
-
-          .s010 form .inner-form .basic-search .input-field .icon-wrap {
-            position: absolute;
-            top: 0;
-            right: 0;
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-align: center;
-            align-items: center;
-            width: 60px;
-            height: 100%;
-        }
-        .s010 form .inner-form .basic-search .input-field .icon-wrap svg {
-          width: 34px;
-          height: 34px;
-          fill: #fff;
-      }
-          </style>
-          <div class='conv-area-search basic-search'>
-            <div class="input-field">
-              <input id="search" type="text" placeholder="Type Keywords">
-              <div class="icon-wrap">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-              </svg>
-              </div>
-            </div>
-          </div>
+        
+        
           
           <div class="conv-area-search-output">
-            
+            <div class="c-a-s-o-container">
+
+              <div class="c-a-s-o"  onclick="open_chat_area('{{Profile.chat_box_id}}',this)">
+                {% if Profile.img %}
+                <img class="c-a-s-o-profile" src="{{ Profile.img.url }}" alt="" />
+                {% else %}
+                <i class="c-a-s-o-profile bx bx-user bx-lg"></i>
+                {% endif %}
+                <div class="c-a-s-o-detail" >
+                  <div class="c-a-s-o-username">{{Profile.title}} user</div>
+                  <div class="c-a-s-o-content">
+                    <span class="c-a-s-o-message">about...</span>
+                  </div>
+                </div>
+                <a class="c-a-s-o-create-chat" onclick="create_chat('{{Profile.email}}')"><i class="bx bx-message-rounded-add "></i></a>
+            </div>
+            </div>
           </div>
-          
+          <button class="add" onclick="load_add_conv()"></button>
         </div>
 
 
@@ -149,35 +125,7 @@
           <div class="chat-area" style="display:non;">
             <!-- CHAT (Header/Main/Footer) AREA -->
 
-            <div class="chat-area-footer" >
-              
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
-                  <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
-                  <circle cx="8.5" cy="8.5" r="1.5" />
-                  <path d="M21 15l-5-5L5 21" /></svg>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-circle">
-                  <circle cx="12" cy="12" r="10" />
-                  <path d="M12 8v8M8 12h8" /></svg>
 
-                  
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip">
-                  <path d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48" /></svg>
-                
-                <label for="file-input">
-                  <a class="a_btn"><i class="fa fa-paperclip" ></i></a>
-                </label>
-                <input type="file" multiple  id="file_input" style="display: none;"></input>
-              
-                <a class="a_btn"><i class="bx bxs-face bx-sm "></i></a>
-                <input type="text" id="text_input"  placeholder="Type something here..." />
-
-                <a class="a_btn" onclick="sendMessage()"><i class="bx bx-send bx-sm btn"></i></a>
-
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up">
-                  <path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3" /></svg>
-              
-              
-            </div>
           </div>
 
           <!-- END CHAT AREA -->
